# Checkers

./: Checkers.java  README.md
ChekersLib/: CMakeLists.txt  Game_JNIHandler.h  library.cpp
Game/: BoardChangeListener.java  CheckersBoard.java  CheckersMVC.java  CheckersMain.java  CheckersMouseListener.java  Controller.java  Game_JNIHandler.h  JNIHandler.java  JNIHandlerTest.java  MyData.java  MyView.java  RepaintEvent.java  RepaintEventListener.java
Gpt/: CheckersBoard.java  CheckersMain.java  CheckersMouseListener.java  JNIHandler.java  MyData.java  MyView.java
